--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,14 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import { changeLanguage, setDefaultNamespace } from "i18next";
+import Layout from "../layouts/Layout.astro";
+
+changeLanguage("en");
+
+setDefaultNamespace("home");
 ---
 
-<Layout title="Welcome to Astro.">
-	<Logo />
+<Layout>
+	<slot />
 </Layout>
 
 <style>
