--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,9 +1,9 @@
 ---
-
+import { t } from "i18next";
 ---
 
 <nav class="navigation">
-    <a href="/">Home</a>
+    <a href="/">{t("common:nav.home")}
 </nav>
 
 <style>
