--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,23 +1,20 @@
 ---
 import { ViewTransitions } from "astro:transitions";
+import i18next, { t } from "i18next";
+import { HeadHrefLangs } from "astro-i18next/components";
 import NavBar from "../components/NavBar.astro";
-
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={i18next.language}>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="[description]" />
+		<meta name="description" content={t("meta.description")} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>{t("meta.title")}</title>
+		<HeadHrefLangs />
 		<ViewTransitions />
 	</head>
 	<body>
