--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -1,8 +1,9 @@
 ---
 import { changeLanguage, setDefaultNamespace } from "i18next";
-import Layout from "../layouts/Layout.astro";
+import Layout from "../../layouts/Layout.astro";
 
-changeLanguage("en");
+changeLanguage("fr");
+
 setDefaultNamespace("home");
 ---
 
