--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -1,8 +1,16 @@
 ---
-import { changeLanguage, setDefaultNamespace } from "i18next";
+import { changeLanguage, setDefaultNamespace, t } from "i18next";
+import Layout from "../layouts/Layout.astro";
 
 changeLanguage("en");
 
 setDefaultNamespace("process");
 ---
 
+<Layout>
+    
+</Layout>
+
+<style>
+	
+</style>
