--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,18 +1,61 @@
 ---
 import { t } from "i18next";
 import { localizePath } from "astro-i18next";
+import { slide } from "astro:transitions";
+
+const pages = [
+    { path: localizePath("/"), title: t("home:meta.title") },
+    { path: localizePath("/process"), title: t("common:nav.process") },
+    { path: localizePath("/about"), title: t("common:nav.about") },
+];
+
+const pathname = Astro.site?.pathname
 ---
 
 <nav class="navigation">
-    <a href={localizePath("/")}>{t("common:nav.home")}</a>
-    <a href={localizePath("/process")}>{t("common:nav.process")}</a>
-    <a href={localizePath("/about")}>{t("common:nav.about")}</a>
+    {pages.map((page, i) => (
+        <a
+            transition:animate={slide({ duration: 500 + 200*i })}
+            href={page.path}
+            class:list={[{"current-page": page.path === pathname}]}>
+            {page.title}
+        </a>
+    ))}
 </nav>
 
 <style>
+    .navigation {
+        display: grid;
+        width: clamp(20rem, 40rem, 100%);
+        margin: 0 auto;
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+        align-items: center;
+        column-gap: 1rem;
 
+        border: solid var(--line-width) var(--color-text);
+        border-top: 0;
+        overflow: hidden;
+        background-color: #bab9c0;
+    }
+
+    .navigation a {
+        text-decoration: none;
+        color: var(--color-text);
+        font-size: 1.4rem;
+        padding: .75em;
+        text-align: center;
+        transition: .2s ease-in-out;
+        transition: letter-spacing transform;
+    }
+
+    .navigation a:hover {
+        text-decoration: underline;
+        letter-spacing: .1em;
+    }
+
+    .navigation a:active {
+        letter-spacing: 0;
+        transform: translateY(2px);
+    }
 </style>
-
-<script>
-	
-</script>
