--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,6 +64,8 @@ import { textSpacing } from "../scripts/transitions";
 		html,
 		body {
 			min-height: 100%;
+			width: 100vw;
+			overflow-x: hidden;
 		}
 
 		body {
@@ -76,6 +78,7 @@ import { textSpacing } from "../scripts/transitions";
 			background-repeat: no-repeat;
 			background-size: cover;
 			font-family: "Montserrat", sans-serif;
+			
 		}
 
 		h1 {
@@ -83,6 +86,26 @@ import { textSpacing } from "../scripts/transitions";
 			font-size: 5rem;
 			margin: 8rem 0;
 			text-align: center;
+		}
+
+		html.lenis, html.lenis body {
+			height: auto;
+		}
+
+		.lenis.lenis-smooth {
+			scroll-behavior: auto !important;
+		}
+
+		.lenis.lenis-smooth [data-lenis-prevent] {
+			overscroll-behavior: contain;
+		}
+
+		.lenis.lenis-stopped {
+			overflow: hidden;
+		}
+
+		.lenis.lenis-scrolling iframe {
+			pointer-events: none;
 		}
 	</style>
 </html>
