--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import { changeLanguage, setDefaultNamespace } from "i18next";
 import Layout from "../layouts/Layout.astro";
 import { fade } from "astro:transitions";
+import Separator from "../components/Separator.astro";
 
 changeLanguage("en");
 setDefaultNamespace("home");
@@ -12,8 +13,9 @@ projects.sort((a, b) => b.frontmatter.relevance - a.frontmatter.relevance);
 
 <Layout>
 	{projects.map((project) => (
+        <Separator />
         <section class="project">
-            <h2 transition:animate={fade()}>{project.frontmatter.title}</h2>
+            <h2 transition:animate={fade()} class="project-title">{project.frontmatter.title}</h2>
             <div class="content">
                 <project.Content />
             </div>
@@ -22,75 +24,39 @@ projects.sort((a, b) => b.frontmatter.relevance - a.frontmatter.relevance);
 </Layout>
 
 <script>
-    import gsap from "gsap";
-    import { ScrollTrigger } from "gsap/ScrollTrigger";
-    gsap.registerPlugin(ScrollTrigger);
-
-    document.addEventListener('astro:page-load', () => {
-        // sub-sections that will be animated have more than one child
-        const contents = gsap.utils.toArray(".content");
-        contents.forEach((content) => {
-            const c = content as HTMLElement;
-            const extraWidth = c.offsetWidth - window.innerWidth;
-            if (extraWidth < 0) {
-                return; // skip if content is not wider than the screen
-            }
-            const parent = c.parentElement;
-            gsap.to(c, {
-                scrollTrigger: {
-                    trigger: parent,
-                    start: "top top",
-                    end: `+=${extraWidth}px top`,
-                    scrub: 0.5,
-                    pin: true,
-                },
-                ease: "none",
-                x: () => -(extraWidth),
-            });
-
-            /* const children = new Array(c.children);
-            children.forEach((child) => {
-                gsap.to(child, {
-                    scrollTrigger: {
-                        trigger: child,
-                        start: "center center",
-                        endTrigger: child,
-                        end: "+=" + extraWidth,
-                        scrub: 2,
-                        markers: true,
-                    },
-                    stagger: 1,
-                    ease: "none",
-                    x: -150,
-                });
-            }); */
-        });
-    });
+    import '../scripts/home';
 </script>
 
 <style>
     section {
         position: relative;
         height: 100vh;
+        overflow: hidden;
     }
 	h2 {
-        z-index: 3;
-        font-size: 5rem;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 3rem;
+        text-align: center;
+        margin: auto;
         font-weight: 400;
         width: fit-content;
         font-family: "Roxie Rossa", serif;
     }
     .content {
+        margin-top: 4rem;
         position: relative;
         display: grid;
         grid-template-rows: repeat(2, 45%);
         grid-auto-flow: column;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: 90vh;
+        min-width: 100%;
         width: max-content;
         row-gap: 2rem;
-        column-gap: 5rem;
-        padding: 4rem 2rem;
+        column-gap: 10vw;
+        padding: 1rem 2vw;
     }
 </style>
