--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -37,7 +37,7 @@ const pathname = Astro.site?.pathname
 
         border: solid var(--line-width) var(--color-text);
         overflow: hidden;
-        background-color: #bab9c0;
+        background-color: var(--background-1);
         z-index: 5;
     }
 
