--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,8 +52,8 @@ import Separator from "../components/Separator.astro";
 		:root {
 			--color-text: #111;
 			--line-width: 0.1rem;
-			--background-1: #96969c;
-			--background-2: #d2d3d4;
+			--background-1: #d2d3d4;
+			--background-2: #f0f0f8;
 		}
 
 		* {
@@ -73,6 +73,7 @@ import Separator from "../components/Separator.astro";
 			background-repeat: no-repeat;
 			background-size: cover;
 			font-family: "Montserrat", sans-serif;
+			overflow-x: hidden;
 		}
 
 		h1 {
