--- a/src/components/home/ProjectText.astro
+++ b/src/components/home/ProjectText.astro
@@ -19,6 +19,7 @@ const { title, big=false } = Astro.props;
         align-items: center;
         width: min(90vw, 25rem);
         margin: auto;
+        z-index: 1;
     }
     .wrap.big {
         grid-row: span 2;
