--- a/src/styles/transitions.css
+++ b/src/styles/transitions.css
@@ -41,3 +41,21 @@
         opacity: 1;
     }
 }
+
+@keyframes circleIn {
+    from {
+        clip-path: circle(0% at 50% 50%);
+    }
+    to {
+        clip-path: circle(150% at 50% 50%);
+    }
+}
+
+@keyframes circleOut {
+    from {
+        clip-path: circle(150% at 50% 50%);
+    }
+    to {
+        clip-path: circle(0% at 50% 50%);
+    }
+}
