--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,21 +34,16 @@ projects.sort((a, b) => b.frontmatter.relevance - a.frontmatter.relevance);
         overflow: hidden;
     }
 	h2 {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        border: solid var(--line-width) var(--color-text);
-        z-index: 0;
-        font-size: 1.8rem;
+        font-size: 2.5rem;
+        padding: 0 .5rem;
         text-align: center;
         font-weight: 400;
         width: fit-content;
+        margin: auto;
         font-family: "Roxie Rossa", serif;
-        background-color: var(--background-1);
-        padding: .5rem 1rem;
     }
     .content {
-        margin-top: 6rem;
+        margin-top: 1rem;
         position: relative;
         display: grid;
         grid-template-rows: repeat(2, 45%);
