--- a/src/components/Separator.astro
+++ b/src/components/Separator.astro
@@ -9,7 +9,7 @@ const { height = "10rem" } = Astro.props;
         /* vertical */
         width: var(--line-width);
         border: none;
-        background-color: var(--color-text);
+        background-color: var(--text-color);
         margin: 2rem auto;
     }
 </style>
