--- a/src/components/home/ProjectText.astro
+++ b/src/components/home/ProjectText.astro
@@ -28,7 +28,8 @@ const { title, big=false } = Astro.props;
         position: absolute;
         top: -1.5em;
         left: -.5em;
-        background-color: var(--background-1);
+        background-color: var(--background-2);
+        border: solid var(--line-width) var(--text-color);
         padding: 0.5em;
         font-size: 1.5rem;
         font-weight: 500;
@@ -42,8 +43,9 @@ const { title, big=false } = Astro.props;
         display: block;
         width: 100%;
         padding: 1rem;
-        font-size: 1.2rem;
-        border: solid var(--line-width) var(--color-text);
+        padding-top: 1.5rem;
+        font-size: 1rem;
+        border: solid var(--line-width) var(--text-color);
         background-color: var(--background-2);
         max-height: 70vh;
         overflow-y: auto;
@@ -55,7 +57,7 @@ const { title, big=false } = Astro.props;
         font-size: 2.5rem;
         font-weight: 500;
         padding: .25em;
-        border: solid var(--line-width) var(--color-text);
+        border: solid var(--line-width) var(--text-color);
         width: fit-content;
         background-color: var(--background-1);
     }
